--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -156,6 +156,7 @@ table {
 }
 img {
     max-width: 100%;
+    height: auto;
 }
 html {
     box-sizing: border-box;
@@ -1132,28 +1133,28 @@ h6 {
     max-width: 1040px;
     width: 100%;
   }
-  
+
   .kg-gallery-row {
     display: flex;
     flex-direction: row;
     justify-content: center;
   }
-  
+
   .kg-gallery-image img {
     display: block;
     margin: 0;
     width: 100%;
     height: 100%;
   }
-  
+
   .kg-gallery-row:not(:first-of-type) {
     margin: 0.75em 0 0 0;
   }
-  
+
   .kg-gallery-image:not(:first-of-type) {
     margin: 0 0 0 0.75em;
   }
-  
+
   .kg-gallery-card + .kg-image-card.kg-width-wide,
   .kg-gallery-card + .kg-gallery-card,
   .kg-image-card.kg-width-wide + .kg-gallery-card,
